tests/grammar/snapshots/r#mod__grammar__alpha034__not-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"not not true\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Not(
                        (),
                        Not(
                            (),
                            Boolean(
                                True,
                            ),
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
