tests/grammar/snapshots/r#mod__grammar__alpha034__not.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"not true\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Not(
                        (),
                        Boolean(
                            True,
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
