tests/grammar/snapshots/r#mod__grammar__alpha034__number-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1.0\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Number(
                            (
                                1.0,
                                0..3,
                            ),
                        ),
                        0..3,
                    ),
                ),
                0..3,
            ),
        ],
    ),
    0..3,
)
