tests/grammar/snapshots/r#mod__grammar__alpha034__number-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"-1.0\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neg(
                            (
                                Number(
                                    (
                                        1.0,
                                        1..4,
                                    ),
                                ),
                                1..4,
                            ),
                        ),
                        1..4,
                    ),
                ),
                0..4,
            ),
        ),
        0..4,
    ),
]
