tests/grammar/snapshots/r#mod__grammar__alpha034__number-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"-1.24\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neg(
                            (
                                Number(
                                    (
                                        1.24,
                                        1..5,
                                    ),
                                ),
                                1..5,
                            ),
                        ),
                        1..5,
                    ),
                ),
                0..5,
            ),
        ),
        0..5,
    ),
]
