tests/grammar/snapshots/r#mod__grammar__alpha034__number-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"-5\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Number(
                        -5.0,
                    ),
                ),
                None,
            ),
        ),
    ],
)
