tests/grammar/snapshots/r#mod__grammar__alpha034__number-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"001.00004\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                1.00004,
                                0..9,
                            ),
                        ),
                        0..9,
                    ),
                ),
                0..9,
            ),
        ),
        0..9,
    ),
]
