tests/grammar/snapshots/r#mod__grammar__alpha034__or-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"false or false or true\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Or(
                        Or(
                            Boolean(
                                False,
                            ),
                            (),
                            Boolean(
                                False,
                            ),
                        ),
                        (),
                        Boolean(
                            True,
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
