tests/grammar/snapshots/r#mod__grammar__alpha034__or.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"false or false\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Or(
                            (
                                Boolean(
                                    (
                                        false,
                                        0..5,
                                    ),
                                ),
                                0..5,
                            ),
                            (
                                Boolean(
                                    (
                                        false,
                                        9..14,
                                    ),
                                ),
                                9..14,
                            ),
                        ),
                        0..14,
                    ),
                ),
                0..14,
            ),
        ),
        0..14,
    ),
]
